deployments/docker/academy/kubernetes/pynote-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: username
  labels:
    run: username
spec:
  containers:
  - name: username
    image: fsadykov/pynote:latest
    imagePullPolicy: Always
    args: [
      "--username=farkhodsadykov", 
      "--password=redhat"]
  restartPolicy: OnFailure
