deployments/docker/academy/kubernetes/pynote-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: fsadykov
  name: fsadykov
spec:
  ports:
  - port: 7000
    protocol: TCP
    targetPort: 8888
  selector:
    run: fsadykov
  type: ClusterIP
